# VNUHCM-UNIGATE

./: .gitignore  README.md  example.env  giay_bao_diem_thi.html  pyproject.toml  requirements.txt  server.py  teml.html
app/models/: admission_preferences.py
app/routers/: __init__.py  admission_info.py  admission_preferences.py  admission_results.py  exam_registration.py  exam_results.py  user_registration.py  user_update.py
app/routers/models/: admission_preferences.py  admission_results.py  exam_registration.py  user.py
app/services/: admission_info_service.py  admission_preferences_service.py  admission_results_service.py  application_report.py  auth_utils.py  chatbot.py  exam_registration_service.py  exam_results_service.py  result_report.py  user_service.py  user_update_service.py
nosqlDB/: documents.json  forum.json
sql/: XetTuyen.sql  account_security.sql  khuyen_nghi.sql  report_form.sql  tai_khoan_thi_sinh.sql  xet_tuyen.sql
